# axum-graphql

./: .env  Cargo.toml
src/: main.rs  prelude.rs
src/config/: mod.rs
src/db/: mod.rs  postgres.rs
src/db/migration/: Cargo.toml  docker-compose.yml
src/db/migration/src/: main.rs
src/db/migration/src/tables/: 01_create_projects.sql  02_create_project_tree_nodes.sql  03_create_rf_canvas.sql  04_create_rf_nodes.sql  05_create_rf_edges.sql
src/db/projects/: mod.rs  rf_canva.rs  tree_nodes.rs
src/domain/project/: mod.rs  rf_canva.rs  tree.rs
src/domain/user/: mod.rs
src/graphql/: mod.rs  mutation.rs  query.rs  subscription.rs
src/router/: mod.rs
