[package]
name = "axum-graphql"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = { version = "7.0.16", features = ["tracing", "apollo_tracing"]}
async-graphql-axum = "7.0.17"
axum = "0.8.8"
futures-util = "0.3.31"
tokio = { version = "1.48.0", features = ["full"]}
tokio-stream = "0.1.17"
tower-http = { version = "0.6.8", features = ["cors", "trace"]}
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
