[package]
name = "axum-graphql"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-graphql = { version = "7.0.16", features = [
    "tracing",
    "apollo_tracing",
    "uuid",
] }
async-graphql-axum = "7.0.17"
axum = "0.8.8"
futures-util = "0.3.31"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.19.0", features = ["v4"] }

[workspace]
members = ["./src/db/migration"]
